--- a/src/app/views/item-details/item-details.component.scss
+++ b/src/app/views/item-details/item-details.component.scss
@@ -187,12 +187,14 @@
 }
 
 .box__file {
-    width: 0.1px;
-    height: 0.1px;
+    width: 100%;
+    height: 100%;
     opacity: 0;
     overflow: hidden;
     position: absolute;
-    z-index: -1;
+    z-index: 1;
+    left: 0;
+    top: 0;
 }
 
 .box__file + label {
